Issue 53: java 8